# rag_in_a_box

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  ROADMAP.md  build.sbt  codecov.yml  docker-compose.yml  lint-staged.config.js  package-lock.json  package.json  run.sh  suppression.xml
.github/workflows/: ci.yml  docs.yml  release.yml
admin-ui/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
admin-ui/.storybook/: main.ts  preview.ts
admin-ui/e2e/: analytics.spec.ts  chat.spec.ts  chunking.spec.ts  config.spec.ts  dashboard.spec.ts  documents.spec.ts  navigation.spec.ts  visibility.spec.ts
admin-ui/public/: openapi.yaml
admin-ui/src/: App.vue  main.ts
deploy/kubernetes/: README.md  api.yaml  configmap.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secret.yaml
docs/: .gitignore  EXTENDING.md  Gemfile  _config.yml  auth-migration.md  index.md  oauth-configuration.md  oauth-security.md  production-deployment.md  s3-ingestion.md  troubleshooting.md
docs/api/: analytics.md  auth.md  config.md  documents.md  health.md  index.md  query.md  sync.md  tokens.md
docs/getting-started/: index.md  quickstart.md
docs/guide/: access-tokens.md  analytics.md  authentication.md  (+7 more)
project/: plugins.sbt
scripts/: init-db.sql
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: ingest_directory.py
sdk/python/ragbox/: __init__.py  client.py
(+231 files in other folders)
